docs: refresh wave0 workflow inventory

--- a/工作流盤點報告.md
+++ b/工作流盤點報告.md
@@ -1,18 +1,21 @@
 # 工作流盤點報告
 
-| 工作流                                                 | 觸發條件                                                                           | Lint | Unit         | UI E2E             | 健康檢查     | a11y                   | 遠端 E2E                                           | PR 觸發重疊                          | 備註                                                    |
-| ------------------------------------------------------ | ---------------------------------------------------------------------------------- | ---- | ------------ | ------------------ | ------------ | ---------------------- | -------------------------------------------------- | ------------------------------------ | ------------------------------------------------------- |
-| `.github/workflows/ci.yml`                             | `pull_request` (opened/synchronize/reopened/ready_for_review), `workflow_dispatch` | 是   | 是           | 是（本地）         | 是（非阻斷） | 是（pa11y + jest-axe） | 是（條件：PLAYWRIGHT_AUTH_STATE & GAS_WEBAPP_URL） | ✅ 與 PR 觸發完全重疊                | 單一 PR CI；會對未滿足遠端 E2E 的 secret 造成條件跳過   |
-| `.github/workflows/ci-preview.yml`                     | `workflow_dispatch`                                                                | 是   | 否           | 是（本地）         | 是（非阻斷） | 否                     | 是（條件：手動 + secrets）                         | ❌ 僅手動                            | 具 clasp 部署並執行單次遠端 E2E；測試內容與 CI 部分重複 |
-| `.github/workflows/codex-audit.yml`                    | `issue_comment`（包含 `/audit`）、`workflow_dispatch`                              | 是   | 是           | 是（npm run e2e）  | 否           | 否                     | 否                                                 | ❌ 非 PR 自動觸發                    | 兩階段審計流程；可能在 PR 留言時產生長時間佔用          |
-| `.github/workflows/gas-deploy.yml`                     | `workflow_dispatch`                                                                | 否   | 是           | 是（本地）         | 是（非阻斷） | 否                     | 是（條件：secrets）                                | ❌ 僅手動                            | 含 clasp 推送與部署；重複本地 UI/遠端測試，含 preflight |
-| `.github/workflows/npm-auto-upgrade.yml`               | `schedule`（每週一 01:30 UTC）、`workflow_dispatch`                                | 否   | 是（手動時） | 是（手動時；本地） | 否           | 否                     | 否                                                 | ❌ 非 PR 自動觸發                    | 手動時才跑測試；自動排程僅依賴 npm update               |
-| `.github/workflows/npm-outdated.yml`                   | `schedule`（每週一 01:00 UTC）、`workflow_dispatch`                                | 否   | 否           | 是（手動時）       | 否           | 否                     | 否                                                 | ❌ 非 PR 自動觸發                    | 產出依賴過期報告；手動可執行本地 E2E                    |
-| `.github/workflows/predeploy.yml`                      | `push`（main）、`workflow_dispatch`                                                | 否   | 否           | 否                 | 否           | 否                     | 否                                                 | ⚠️ 非 PR 但會在 main push 後進行部署 | 直接推 Prod clasp 版本；失敗會阻擋主線部署              |
-| `.github/workflows/gas-deploy.yml.bak-20250929-054713` | 無（備份檔）                                                                       | —    | —            | —                  | —            | —                      | —                                                  | —                                    | 備份流程檔案；不會被 GitHub 執行                        |
+| 工作流                                               | 觸發條件                                                                            | Lint | Unit              | 本地 UI E2E         | 健康檢查     | a11y                  | 遠端 E2E            | PR 觸發重疊               | 備註                                                            |
+| ---------------------------------------------------- | ----------------------------------------------------------------------------------- | ---- | ----------------- | ------------------- | ------------ | --------------------- | ------------------- | ------------------------- | --------------------------------------------------------------- |
+| .github/workflows/ci.yml                             | `pull_request`（opened/synchronize/reopened/ready_for_review）、`workflow_dispatch` | 是   | 是                | 是                  | 是（非阻斷） | 是（pa11y＋jest-axe） | 是（需 secrets）    | ✅ PR 預設流程            | PR CI 涵蓋 lint/unit/UI E2E/a11y/遠端測試與健康檢查             |
+| .github/workflows/ci-preview.yml                     | `workflow_dispatch`                                                                 | 否   | 否                | 是                  | 是（非阻斷） | 否                    | 是（需 secrets）    | ⚠️ 手動但測試與 CI 重疊   | 手動預覽部署並重跑本地/遠端 E2E，會寫入 clasprc 與 staging 部署 |
+| .github/workflows/codex-audit.yml                    | `issue_comment`（含 `/audit`）、`workflow_dispatch`                                 | 是   | 是（含 coverage） | 是（`npm run e2e`） | 否           | 否                    | 是（`npm run e2e`） | ⚠️ 手動審計與 CI 測試重複 | 兩階段審計流程，產出多份報表與建議留言                          |
+| .github/workflows/gas-deploy.yml                     | `workflow_dispatch`                                                                 | 否   | 是                | 是                  | 是（非阻斷） | 否                    | 是（需 secrets）    | ⚠️ 手動部署與 CI 測試重疊 | 含 staged 部署、UI/遠端測試、健康檢查與 clasp 佈署              |
+| .github/workflows/npm-auto-upgrade.yml               | `schedule`（每週一 01:30 UTC）、`workflow_dispatch`                                 | 否   | 是（僅手動）      | 是（手動策略時）    | 否           | 否                    | 否                  | ⚠️ 手動模式重跑測試       | 自動/手動 npm 更新；手動可跑 unit 與 `npm run e2e`              |
+| .github/workflows/npm-outdated.yml                   | `schedule`（每週一 01:00 UTC）、`workflow_dispatch`                                 | 否   | 否                | 是（手動選項）      | 否           | 否                    | 否                  | ⚠️ 手動模式重跑測試       | 產出 outdated 報表；手動可選擇跑本地 UI E2E                     |
+| .github/workflows/predeploy.yml                      | `push`（main）、`workflow_dispatch`                                                 | 否   | 否                | 否                  | 否           | 否                    | 否                  | ⚠️ main push 後觸發       | 直接佈署 production clasp 版本，主要驗證 secrets 與部署狀態     |
+| .github/workflows/\_tmpl_clasp.json                  | 範本（未註冊事件）                                                                  | —    | —                 | —                   | —            | —                     | —                   | —                         | 供產生 workflow 範本，GitHub Actions 不會執行                   |
+| .github/workflows/gas-deploy.yml.bak-20250929-054713 | 無（備份檔）                                                                        | —    | —                 | —                   | —            | —                     | —                   | —                         | 備份流程檔，應移出 workflow 目錄避免誤用                        |
+| .github/workflows/新增 文字文件.txt                  | 無（一般文字檔）                                                                    | —    | —                 | —                   | —            | —                     | —                   | —                         | PowerShell 操作記錄，非合法 workflow 定義                       |
 
 ## PR 紅燈 / 重複執行風險
 
-- **紅燈來源**：`ci.yml` 的 Lint、Unit、本地 UI E2E、a11y（pa11y 與 jest-axe）及遠端 E2E 皆會在失敗時使 PR 標紅。健康檢查設定 `continue-on-error: true`，不會紅燈。
-- **重複測試**：`ci-preview.yml` 與 `gas-deploy.yml` 在手動觸發時會再次執行本地 UI/遠端 E2E，與 PR CI 部分重複。`npm-auto-upgrade.yml`、`npm-outdated.yml` 手動時也會跑本地 UI E2E，與 PR 流程重疊但不會自動影響 PR 狀態。
-- **PR 觸發重疊**：目前僅 `ci.yml` 會在 PR 上自動跑測試，其餘流程要麼手動、要麼排程或 main push。若多個流程手動觸發仍可能與 CI 同時使用同一套測試資源（Playwright artifact 目錄）。
+- **紅燈來源**：PR 預設僅 `ci.yml` 會紅燈；其中 Lint、Unit、本地 UI E2E、a11y（pa11y＋jest-axe）與遠端 E2E 失敗都會阻擋合併。健康檢查設定 `continue-on-error: true`，不會標紅。
+- **重複測試**：`ci-preview.yml`、`gas-deploy.yml`、`npm-auto-upgrade.yml`（手動）、`npm-outdated.yml`（手動）以及 `codex-audit.yml` 都會重複執行部分或全部 CI 測試，造成 Playwright 瀏覽器下載、E2E 場景與報表的重複成本。
+- **部署重疊**：`predeploy.yml` 與 `gas-deploy.yml` 同時操作 clasp 部署（前者指向 production、後者指向 staging），若未妥善協調，main push 後可能重複觸發遠端測試或佈署版本。
+- **備份／噪音檔案**：`gas-deploy.yml.bak-20250929-054713` 與 `新增 文字文件.txt` 不是合法 workflow 定義，需移除或移出目錄以避免混淆。
