--- a/工作流盤點報告.md
+++ b/工作流盤點報告.md
@@ -1,18 +1,20 @@
 # 工作流盤點報告
 
-| 工作流                                                 | 觸發條件                                                                           | Lint | Unit         | UI E2E             | 健康檢查     | a11y                   | 遠端 E2E                                           | PR 觸發重疊                          | 備註                                                    |
-| ------------------------------------------------------ | ---------------------------------------------------------------------------------- | ---- | ------------ | ------------------ | ------------ | ---------------------- | -------------------------------------------------- | ------------------------------------ | ------------------------------------------------------- |
-| `.github/workflows/ci.yml`                             | `pull_request` (opened/synchronize/reopened/ready_for_review), `workflow_dispatch` | 是   | 是           | 是（本地）         | 是（非阻斷） | 是（pa11y + jest-axe） | 是（條件：PLAYWRIGHT_AUTH_STATE & GAS_WEBAPP_URL） | ✅ 與 PR 觸發完全重疊                | 單一 PR CI；會對未滿足遠端 E2E 的 secret 造成條件跳過   |
-| `.github/workflows/ci-preview.yml`                     | `workflow_dispatch`                                                                | 是   | 否           | 是（本地）         | 是（非阻斷） | 否                     | 是（條件：手動 + secrets）                         | ❌ 僅手動                            | 具 clasp 部署並執行單次遠端 E2E；測試內容與 CI 部分重複 |
-| `.github/workflows/codex-audit.yml`                    | `issue_comment`（包含 `/audit`）、`workflow_dispatch`                              | 是   | 是           | 是（npm run e2e）  | 否           | 否                     | 否                                                 | ❌ 非 PR 自動觸發                    | 兩階段審計流程；可能在 PR 留言時產生長時間佔用          |
-| `.github/workflows/gas-deploy.yml`                     | `workflow_dispatch`                                                                | 否   | 是           | 是（本地）         | 是（非阻斷） | 否                     | 是（條件：secrets）                                | ❌ 僅手動                            | 含 clasp 推送與部署；重複本地 UI/遠端測試，含 preflight |
-| `.github/workflows/npm-auto-upgrade.yml`               | `schedule`（每週一 01:30 UTC）、`workflow_dispatch`                                | 否   | 是（手動時） | 是（手動時；本地） | 否           | 否                     | 否                                                 | ❌ 非 PR 自動觸發                    | 手動時才跑測試；自動排程僅依賴 npm update               |
-| `.github/workflows/npm-outdated.yml`                   | `schedule`（每週一 01:00 UTC）、`workflow_dispatch`                                | 否   | 否           | 是（手動時）       | 否           | 否                     | 否                                                 | ❌ 非 PR 自動觸發                    | 產出依賴過期報告；手動可執行本地 E2E                    |
-| `.github/workflows/predeploy.yml`                      | `push`（main）、`workflow_dispatch`                                                | 否   | 否           | 否                 | 否           | 否                     | 否                                                 | ⚠️ 非 PR 但會在 main push 後進行部署 | 直接推 Prod clasp 版本；失敗會阻擋主線部署              |
-| `.github/workflows/gas-deploy.yml.bak-20250929-054713` | 無（備份檔）                                                                       | —    | —            | —                  | —            | —                      | —                                                  | —                                    | 備份流程檔案；不會被 GitHub 執行                        |
+| 工作流                                                 | 觸發條件                                                                             | Lint          | Unit         | UI E2E                                            | a11y                   | 健康檢查                                                    | 遠端 E2E                                                                          | 佈署/上線                           | Secret / 變數需求                                                               | 備註                                                                      |
+| ------------------------------------------------------ | ------------------------------------------------------------------------------------ | ------------- | ------------ | ------------------------------------------------- | ---------------------- | ----------------------------------------------------------- | --------------------------------------------------------------------------------- | ----------------------------------- | ------------------------------------------------------------------------------- | ------------------------------------------------------------------------- | ------------------------------------------------------------- | ----------------------------------------------------------- |
+| `.github/workflows/ci.yml`                             | `pull_request` (`opened/synchronize/reopened/ready_for_review`)、`workflow_dispatch` | 是            | 是           | 是（本地）                                        | 是（Pa11y + jest-axe） | 是（`continue-on-error`，僅在 `GAS_WEBAPP_URL` 有值時執行） | 是（需 `PLAYWRIGHT_AUTH_STATE` + `GAS_WEBAPP_URL`，缺任一 secret 會顯示 Skipped） | 否                                  | `GAS_WEBAPP_URL`、`PLAYWRIGHT_AUTH_STATE`、`vars.E2E_*`                         | PR 唯一自動 CI；所有檢查紅燈會阻擋合併，健康檢查不紅燈但會上傳 artifact。 |
+| `.github/workflows/ci-preview.yml`                     | `workflow_dispatch`                                                                  | 是            | 否           | 是（本地）                                        | 否                     | 是（`continue-on-error`）                                   | 是（需雙 Secret；無則 Skip）                                                      | 是（clasp 更新 staging deployment） | `CLASPRC_JSON`、`TEST_DEPLOYMENT_ID`、`PLAYWRIGHT_AUTH_STATE`、`GAS_WEBAPP_URL` | 手動預覽佈署，流程與 `ci.yml` 測試高度重疊且額外進行 clasp deploy。       |
+| `.github/workflows/codex-audit.yml`                    | `issue_comment`（含 `/audit`）、`workflow_dispatch`                                  | 是            | 是           | 是（`npm run e2e`，含遠端；失敗不會中斷整體流程） | 否                     | 否                                                          | 是（與本地一起跑；缺 Secret 時遠端段落會失敗但被 `                                |                                     | true` 吞掉）                                                                    | 否                                                                        | `PLAYWRIGHT_AUTH_STATE`、`GAS_WEBAPP_URL`（僅在遠端測試需要） | 長時間審計工作流，產出 coverage、Playwright、靜態分析報告。 |
+| `.github/workflows/gas-deploy.yml`                     | `workflow_dispatch`                                                                  | 否（僅 Jest） | 是           | 是（本地）                                        | 否                     | 是（非阻斷）                                                | 是（需雙 Secret；缺則 Skip）                                                      | 是（clasp 部署 PROD/TEST）          | `CLASPRC_JSON`、`TEST_DEPLOYMENT_ID`、`PLAYWRIGHT_AUTH_STATE`、`GAS_WEBAPP_URL` | 手動部署流程；重複執行 Unit + E2E，並推送 GAS 版本。                      |
+| `.github/workflows/npm-auto-upgrade.yml`               | `schedule`（每週一 01:30 UTC）、`workflow_dispatch`（可選 safe/major）               | 否            | 僅手動觸發時 | 僅手動觸發時（本地 @ui + 遠端）                   | 否                     | 否                                                          | 僅手動觸發時（取決於 secrets）                                                    | 否                                  | `TEST_DEPLOYMENT_ID`（遠端 smoke）、`NPM_UPGRADE_TOKEN`（PR 權限）              | 自動升級排程預設不跑測試；人工啟動時會額外執行 Jest + Playwright。        |
+| `.github/workflows/npm-outdated.yml`                   | `schedule`（每週一 01:00 UTC）、`workflow_dispatch`（可選本地 @ui）                  | 否            | 否           | 僅勾選 `run_e2e` 時                               | 否                     | 否                                                          | 否                                                                                | 否                                  | 無（本地 E2E 亦不需 secret）                                                    | 產出 `outdated.json` 報表；手動可加跑本地 UI E2E。                        |
+| `.github/workflows/predeploy.yml`                      | `push` 到 `main`、`workflow_dispatch`                                                | 否            | 否           | 否                                                | 否                     | 否                                                          | 否                                                                                | 是（clasp 部署 PROD）               | `CLASPRC_JSON`、`GAS_DEPLOYMENT_ID`、`GAS_WEBAPP_URL`                           | 主線 push 後自動部署 PROD；若缺 `GAS_WEBAPP_URL` 會直接標紅停止。         |
+| `.github/workflows/_tmpl_clasp.json`                   | （範本，不會被 runner 執行）                                                         | —             | —            | —                                                 | —                      | —                                                           | —                                                                                 | —                                   | `SCRIPT_ID`（僅作為模板說明）                                                   | 提供 clasp 組態樣板，實際部署需另行複製。                                 |
+| `.github/workflows/gas-deploy.yml.bak-20250929-054713` | 無                                                                                   | —             | —            | —                                                 | —                      | —                                                           | —                                                                                 | —                                   | 無                                                                              | 歷史備份檔案，僅保留參考，不會被 GitHub 執行。                            |
+| `.github/workflows/新增 文字文件.txt`                  | 無                                                                                   | —             | —            | —                                                 | —                      | —                                                           | —                                                                                 | —                                   | 無                                                                              | 人工留下的 CLI 記錄，不屬於 workflow。                                    |
 
 ## PR 紅燈 / 重複執行風險
 
-- **紅燈來源**：`ci.yml` 的 Lint、Unit、本地 UI E2E、a11y（pa11y 與 jest-axe）及遠端 E2E 皆會在失敗時使 PR 標紅。健康檢查設定 `continue-on-error: true`，不會紅燈。
-- **重複測試**：`ci-preview.yml` 與 `gas-deploy.yml` 在手動觸發時會再次執行本地 UI/遠端 E2E，與 PR CI 部分重複。`npm-auto-upgrade.yml`、`npm-outdated.yml` 手動時也會跑本地 UI E2E，與 PR 流程重疊但不會自動影響 PR 狀態。
-- **PR 觸發重疊**：目前僅 `ci.yml` 會在 PR 上自動跑測試，其餘流程要麼手動、要麼排程或 main push。若多個流程手動觸發仍可能與 CI 同時使用同一套測試資源（Playwright artifact 目錄）。
+- **PR 紅燈來源**：`ci.yml` 的 Lint、Unit、本地 UI E2E、兩種 a11y 測試與遠端 E2E（在 secrets 具備時）都會直接標紅；健康檢查設定 `continue-on-error: true`，不會阻斷但仍會上傳記錄。其他 workflows 僅在手動或排程執行時影響分支狀態。
+- **重複測試**：`ci-preview.yml`、`gas-deploy.yml`、`npm-auto-upgrade.yml`（手動模式）會再跑一遍本地 UI/遠端 E2E，與 `ci.yml` 重疊；`codex-audit.yml` 也會執行 `npm run e2e` 並產出 Playwright artifacts。
+- **佈署併行風險**：`ci-preview.yml`、`gas-deploy.yml`、`predeploy.yml` 都會觸發 clasp 佈署。多個流程同時佈署可能衝突，需要透過後續波次整合單一入口。
