chore: refresh repo inventory

--- a/工作流盤點報告.md
+++ b/工作流盤點報告.md
@@ -1,20 +1,89 @@
 # 工作流盤點報告
 
-| 工作流                                                 | 觸發條件                                                                             | Lint          | Unit         | UI E2E                                            | a11y                   | 健康檢查                                                    | 遠端 E2E                                                                          | 佈署/上線                           | Secret / 變數需求                                                               | 備註                                                                      |
-| ------------------------------------------------------ | ------------------------------------------------------------------------------------ | ------------- | ------------ | ------------------------------------------------- | ---------------------- | ----------------------------------------------------------- | --------------------------------------------------------------------------------- | ----------------------------------- | ------------------------------------------------------------------------------- | ------------------------------------------------------------------------- | ------------------------------------------------------------- | ----------------------------------------------------------- |
-| `.github/workflows/ci.yml`                             | `pull_request` (`opened/synchronize/reopened/ready_for_review`)、`workflow_dispatch` | 是            | 是           | 是（本地）                                        | 是（Pa11y + jest-axe） | 是（`continue-on-error`，僅在 `GAS_WEBAPP_URL` 有值時執行） | 是（需 `PLAYWRIGHT_AUTH_STATE` + `GAS_WEBAPP_URL`，缺任一 secret 會顯示 Skipped） | 否                                  | `GAS_WEBAPP_URL`、`PLAYWRIGHT_AUTH_STATE`、`vars.E2E_*`                         | PR 唯一自動 CI；所有檢查紅燈會阻擋合併，健康檢查不紅燈但會上傳 artifact。 |
-| `.github/workflows/ci-preview.yml`                     | `workflow_dispatch`                                                                  | 是            | 否           | 是（本地）                                        | 否                     | 是（`continue-on-error`）                                   | 是（需雙 Secret；無則 Skip）                                                      | 是（clasp 更新 staging deployment） | `CLASPRC_JSON`、`TEST_DEPLOYMENT_ID`、`PLAYWRIGHT_AUTH_STATE`、`GAS_WEBAPP_URL` | 手動預覽佈署，流程與 `ci.yml` 測試高度重疊且額外進行 clasp deploy。       |
-| `.github/workflows/codex-audit.yml`                    | `issue_comment`（含 `/audit`）、`workflow_dispatch`                                  | 是            | 是           | 是（`npm run e2e`，含遠端；失敗不會中斷整體流程） | 否                     | 否                                                          | 是（與本地一起跑；缺 Secret 時遠端段落會失敗但被 `                                |                                     | true` 吞掉）                                                                    | 否                                                                        | `PLAYWRIGHT_AUTH_STATE`、`GAS_WEBAPP_URL`（僅在遠端測試需要） | 長時間審計工作流，產出 coverage、Playwright、靜態分析報告。 |
-| `.github/workflows/gas-deploy.yml`                     | `workflow_dispatch`                                                                  | 否（僅 Jest） | 是           | 是（本地）                                        | 否                     | 是（非阻斷）                                                | 是（需雙 Secret；缺則 Skip）                                                      | 是（clasp 部署 PROD/TEST）          | `CLASPRC_JSON`、`TEST_DEPLOYMENT_ID`、`PLAYWRIGHT_AUTH_STATE`、`GAS_WEBAPP_URL` | 手動部署流程；重複執行 Unit + E2E，並推送 GAS 版本。                      |
-| `.github/workflows/npm-auto-upgrade.yml`               | `schedule`（每週一 01:30 UTC）、`workflow_dispatch`（可選 safe/major）               | 否            | 僅手動觸發時 | 僅手動觸發時（本地 @ui + 遠端）                   | 否                     | 否                                                          | 僅手動觸發時（取決於 secrets）                                                    | 否                                  | `TEST_DEPLOYMENT_ID`（遠端 smoke）、`NPM_UPGRADE_TOKEN`（PR 權限）              | 自動升級排程預設不跑測試；人工啟動時會額外執行 Jest + Playwright。        |
-| `.github/workflows/npm-outdated.yml`                   | `schedule`（每週一 01:00 UTC）、`workflow_dispatch`（可選本地 @ui）                  | 否            | 否           | 僅勾選 `run_e2e` 時                               | 否                     | 否                                                          | 否                                                                                | 否                                  | 無（本地 E2E 亦不需 secret）                                                    | 產出 `outdated.json` 報表；手動可加跑本地 UI E2E。                        |
-| `.github/workflows/predeploy.yml`                      | `push` 到 `main`、`workflow_dispatch`                                                | 否            | 否           | 否                                                | 否                     | 否                                                          | 否                                                                                | 是（clasp 部署 PROD）               | `CLASPRC_JSON`、`GAS_DEPLOYMENT_ID`、`GAS_WEBAPP_URL`                           | 主線 push 後自動部署 PROD；若缺 `GAS_WEBAPP_URL` 會直接標紅停止。         |
-| `.github/workflows/_tmpl_clasp.json`                   | （範本，不會被 runner 執行）                                                         | —             | —            | —                                                 | —                      | —                                                           | —                                                                                 | —                                   | `SCRIPT_ID`（僅作為模板說明）                                                   | 提供 clasp 組態樣板，實際部署需另行複製。                                 |
-| `.github/workflows/gas-deploy.yml.bak-20250929-054713` | 無                                                                                   | —             | —            | —                                                 | —                      | —                                                           | —                                                                                 | —                                   | 無                                                                              | 歷史備份檔案，僅保留參考，不會被 GitHub 執行。                            |
-| `.github/workflows/新增 文字文件.txt`                  | 無                                                                                   | —             | —            | —                                                 | —                      | —                                                           | —                                                                                 | —                                   | 無                                                                              | 人工留下的 CLI 記錄，不屬於 workflow。                                    |
+## .github/workflows/ci.yml
 
-## PR 紅燈 / 重複執行風險
+- **on**：`pull_request`（opened、synchronize、reopened、ready_for_review）、`workflow_dispatch`
+- **lint**：✅ `npm run lint`
+- **test**：✅ `npm test -- --runInBand`
+- **e2e**：✅ `npm run e2e:ui`、條件式遠端 `npm run e2e:remote`
+- **a11y**：✅ `npm run test:a11y:pa11y`、`npm run test:a11y:jest`
+- **health**：✅ `node scripts/health-check.mjs`（可繼續失敗）
+- **備註**：完整 PR 品質門檻並上傳 Playwright/health artifacts。
 
-- **PR 紅燈來源**：`ci.yml` 的 Lint、Unit、本地 UI E2E、兩種 a11y 測試與遠端 E2E（在 secrets 具備時）都會直接標紅；健康檢查設定 `continue-on-error: true`，不會阻斷但仍會上傳記錄。其他 workflows 僅在手動或排程執行時影響分支狀態。
-- **重複測試**：`ci-preview.yml`、`gas-deploy.yml`、`npm-auto-upgrade.yml`（手動模式）會再跑一遍本地 UI/遠端 E2E，與 `ci.yml` 重疊；`codex-audit.yml` 也會執行 `npm run e2e` 並產出 Playwright artifacts。
-- **佈署併行風險**：`ci-preview.yml`、`gas-deploy.yml`、`predeploy.yml` 都會觸發 clasp 佈署。多個流程同時佈署可能衝突，需要透過後續波次整合單一入口。
+## .github/workflows/ci-preview.yml
+
+- **on**：`workflow_dispatch`
+- **lint**：❌
+- **test**：❌
+- **e2e**：✅ `npm run e2e:ui`、條件式 `npm run e2e:remote`
+- **a11y**：❌
+- **health**：✅ `node scripts/health-check.mjs`
+- **備註**：建立測試版 Deployment 後跑本地/遠端 UI 冒煙並輸出報告。
+
+## .github/workflows/codex-audit.yml
+
+- **on**：`issue_comment`（含 `/audit` 指令）、`workflow_dispatch`
+- **lint**：✅ `npm run lint`
+- **test**：✅ `npm run test -- --coverage`
+- **e2e**：✅ `npm run e2e`（失敗不終止流程）
+- **a11y**：❌
+- **health**：❌
+- **備註**：第二階段額外執行 `npx jscpd`、`npx madge`、`npx knip` 產出稽核 artifacts。
+
+## .github/workflows/gas-deploy.yml
+
+- **on**：`workflow_dispatch`
+- **lint**：❌
+- **test**：✅ `npm test --if-present`
+- **e2e**：✅ `npm run e2e:ui`、條件式 `npm run e2e:remote`
+- **a11y**：❌
+- **health**：✅ 內建健康檢查 curl 驗證
+- **備註**：分成測試與部署階段，最後使用 `clasp deploy` 更新 PROD 並驗證版本。
+
+## .github/workflows/npm-auto-upgrade.yml
+
+- **on**：`schedule`（每週一 01:30 UTC）、`workflow_dispatch`
+- **lint**：❌
+- **test**：⚠️ 僅手動觸發時執行 `npm test`
+- **e2e**：⚠️ 僅手動觸發時執行 `npm run e2e`
+- **a11y**：❌
+- **health**：❌
+- **備註**：依 `strategy`（safe/major）調整套件並自動建立 PR，無條件健康檢查。
+
+## .github/workflows/npm-outdated.yml
+
+- **on**：`schedule`（每週一 01:00 UTC）、`workflow_dispatch`
+- **lint**：❌
+- **test**：❌
+- **e2e**：⚠️ 手動且 `run_e2e=true` 時執行 `npm run e2e:ui`
+- **a11y**：❌
+- **health**：❌
+- **備註**：核心任務為輸出 `outdated.json` 與 Summary 報告。
+
+## .github/workflows/predeploy.yml
+
+- **on**：`push`（main）、`workflow_dispatch`
+- **lint**：❌
+- **test**：❌
+- **e2e**：❌
+- **a11y**：❌
+- **health**：❌
+- **備註**：主要處理 `clasp version` 與 `clasp deploy`，確保 PROD Deployment 指向最新版本。
+
+## .github/workflows/\_tmpl_clasp.json
+
+- **on**：❌（僅模板檔案）
+- **lint/test/e2e/a11y/health**：不適用
+- **備註**：作為自訂 Workflow 樣板，不由 GitHub Actions 直接執行。
+
+## .github/workflows/gas-deploy.yml.bak-20250929-054713
+
+- **on**：❌（歷史備份）
+- **lint/test/e2e/a11y/health**：不適用
+- **備註**：保留舊版部署流程做為參考。
+
+## .github/workflows/新增 文字文件.txt
+
+- **on**：❌（純備忘）
+- **lint/test/e2e/a11y/health**：不適用
+- **備註**：紀錄手動操作步驟，非自動化流程。
