docs: log dedup decisions

--- a/工作流盤點報告.md
+++ b/工作流盤點報告.md
@@ -1,14 +1,14 @@
 # 工作流盤點報告
 
-## .github/workflows/ci.yml
+## .github/workflows/ci.yml（CI）
 
 - **on**：`pull_request`（opened、synchronize、reopened、ready_for_review）、`workflow_dispatch`
 - **lint**：✅ `npm run lint`
 - **test**：✅ `npm test -- --runInBand`
 - **e2e**：✅ `npm run e2e:ui`、條件式遠端 `npm run e2e:remote`
-- **a11y**：✅ `npm run test:a11y:pa11y`、`npm run test:a11y:jest`
+- **a11y**：✅ `npm run test:a11y:pa11y`
 - **health**：✅ `node scripts/health-check.mjs`（可繼續失敗）
-- **備註**：完整 PR 品質門檻並上傳 Playwright/health artifacts。
+- **備註**：單一 PR CI 串連 Install→Lint→Jest→Playwright→Health→Pa11y→Remote（需同時具備 GAS URL 與 auth）。
 
 ## .github/workflows/ci-preview.yml
 
@@ -37,7 +37,7 @@
 - **test**：✅ `npm test --if-present`
 - **e2e**：✅ `npm run e2e:ui`、條件式 `npm run e2e:remote`
 - **a11y**：❌
-- **health**：✅ 內建健康檢查 curl 驗證
+- **health**：✅ `node scripts/health-check.mjs`
 - **備註**：分成測試與部署階段，最後使用 `clasp deploy` 更新 PROD 並驗證版本。
 
 ## .github/workflows/npm-auto-upgrade.yml
