chore: update dedup tracker for npm-outdated

--- a/reports/工作流盤點報告.md
+++ b/reports/工作流盤點報告.md
@@ -2,73 +2,77 @@
 
 ## 快速摘要
 
-- **共 6 個有效 YAML 工作流**（ci-preview、codex-audit、gas-deploy、npm-auto-upgrade、npm-outdated、predeploy），外加 1 份舊版備份（gas-deploy.yml.bak-20250929-054713）與 1 份純文字筆記。
-- **ci-preview、gas-deploy、predeploy** 皆在 PR 階段觸發並跑 Playwright/Jest/健康檢查，形成三份重複的品質關卡；任一失敗都會讓 PR 呈現紅燈。
-- **npm-outdated** 已符合「僅做套件盤點、不跑測試」的需求；其它排程（npm-auto-upgrade）則仍包含完整測試鏈。
-- 建議依「去重執行對照表」後續計畫，停用 ci-preview、調整 predeploy 僅保留部署前必要步驟，並保留 npm-outdated 的純盤點角色。
+- **共 7 個有效 YAML 工作流**（ci、ci-preview、codex-audit、gas-deploy、npm-auto-upgrade、npm-outdated、predeploy）；另有 `_tmpl_clasp.json` 為參考模板。
+- **只有 `ci.yml` 會在 PR 事件自動執行**，並維持 Install → Lint → Jest → Playwright（@ui/@remote）→ Health → pa11y 的既定順序。
+- **ci-preview、gas-deploy、predeploy** 現在僅保留部署與遠端冒煙、健康檢查邏輯，其餘測試完全交由主 CI。
+- **npm-auto-upgrade 與 npm-outdated** 均聚焦於套件盤點／升級與報告產出，不再內含 Jest 或 Playwright 流程。
+- **codex-audit** 繼續提供手動品質稽核（lint/typecheck/Jest/Playwright + 靜態分析），不影響 PR 狀態。
 
 ## 工作流逐一盤點
 
+### ci (`.github/workflows/ci.yml`)
+
+- **觸發條件**：`pull_request`（opened、synchronize、reopened、ready_for_review）與 `workflow_dispatch`。
+- **執行項目**：`npm ci` → `npm run lint` → `npm test -- --runInBand` → 安裝 Playwright → `npm run e2e:ui` → `node scripts/health-check.mjs`（非阻斷，上傳 `artifacts/health*.json`）→ `npm run test:a11y:pa11y` → `npm run e2e:remote`（僅在 `PLAYWRIGHT_AUTH_STATE` 與 `GAS_WEBAPP_URL` 皆存在時執行，否則記錄 Skipped）。
+- **PR 影響**：為唯一 PR 自動檢查；任一步驟失敗會讓 PR 紅燈，健康檢查除外。
+- **備註**：滿足驗收清單的步驟順序與條件語法，並產出完整 artifacts。
+
 ### ci-preview (`.github/workflows/ci-preview.yml`)
 
-- **觸發條件**：`workflow_dispatch`、非 main 分支 push、所有 PR 事件、issue 開啟/重新開啟與含 `/preview` 指令的 issue comment。
-- **執行項目**：`npm ci`、Playwright 安裝、clasp 建版 + 部署至測試 Deployment、`npm run e2e:ui`、`npm run e2e:remote`（透過 `scripts/auto-repair.mjs`）、`node scripts/health-check.mjs`，並上傳報告與健康檢查 artifacts。
-- **PR 影響**：會更新測試部署並在 PR 中留下預覽連結；任何測試失敗會讓 PR 狀態變紅。
-- **重疊情況**：所有測試/健康檢查皆與 `gas-deploy`、`predeploy` 重複。
+- **觸發條件**：`workflow_dispatch`。
+- **執行項目**：`npm ci`、安裝 Playwright 瀏覽器、寫入 `~/.clasprc.json`、建立 GAS 版本並更新測試 Deployment、設定測試 URL、`npm run e2e:remote`（僅在雙 Secret 存在時執行）、`node scripts/health-check.mjs`、上傳 Playwright/health artifacts。
+- **PR 影響**：僅提供手動預覽部署；無自動觸發亦不再包含本地 UI 或 Jest 測試。
+- **備註**：若缺任一 Secret，會跳過遠端 E2E 並保留部署與健康檢查記錄。
 
 ### codex-audit (`.github/workflows/codex-audit.yml`)
 
-- **觸發條件**：手動 `workflow_dispatch` 或在 PR issue comment 中輸入 `/audit`。
-- **執行項目**：分成兩段 Job；Part1 跑 lint、typecheck、Jest、Playwright、本地 `npm run e2e` 與 `npm run build`，Part2 跑 jscpd、madge、knip，產出 `reports/` 與 HTML artifacts。
-- **PR 影響**：不會自動阻擋 PR，僅在觸發時回報狀態。
-- **重疊情況**：測試/靜態分析與 CI 相同，但屬於人工稽核用途。
+- **觸發條件**：`workflow_dispatch` 或在 PR issue comment 中輸入 `/audit`。
+- **執行項目**：Part 1 跑 lint、typecheck、Jest、Playwright、`npm run build`；Part 2 跑 jscpd、madge、knip 並彙整報告。
+- **PR 影響**：純人工稽核，結果僅做參考，不改變 PR 狀態。
+- **備註**：維持完整品質門檻供專案稽核使用。
 
 ### gas-deploy (`.github/workflows/gas-deploy.yml`)
 
-- **觸發條件**：`workflow_dispatch`、針對 `main` 分支的 PR 與 push。
-- **執行項目**：
-  - Job `unit-tests`：`npm ci`、Playwright 安裝、`npm test`。
-  - Job `test-stage`（PR 與 main push）：`npm run e2e:ui`、`npm run e2e:remote`（含 auto-repair）、`node scripts/health-check.mjs`、clasp 推送與測試 Deployment 更新、Health API 檢查、Puppeteer `npm run e2e`。
-  - Job `deploy-prod`（main push）：clasp 推 PROD、再次健康檢查。
-- **PR 影響**：PR 上所有 Job 任一失敗即紅燈。
-- **重疊情況**：與 `ci-preview`/`predeploy` 同步執行 Playwright、健康檢查、clasp 作業。
+- **觸發條件**：`workflow_dispatch`。
+- **執行項目**：`npm ci`、安裝 Playwright、視 Secret 回復 `auth.json`、`npm run e2e:remote`（僅在 `PLAYWRIGHT_AUTH_STATE` 與 `GAS_WEBAPP_URL` 皆存在）、`node scripts/health-check.mjs`、撰寫 `~/.clasprc.json`、多項 clasp 防呆與部署（包含測試 Deployment 更新、版本檢查、PROD 推送與驗證）。
+- **PR 影響**：無自動觸發；遠端冒煙與健康檢查若失敗會阻擋後續部署步驟。
+- **備註**：已移除 Jest/本地 UI 測試，僅保留部署相關流程。
 
 ### npm-auto-upgrade (`.github/workflows/npm-auto-upgrade.yml`)
 
-- **觸發條件**：每週一 01:30 UTC 排程、或手動指定策略（safe/major）。
-- **執行項目**：`npm install`、Playwright 安裝、`npm outdated` 前後比較、`npm update` 或 `npx npm-check-updates`、`npm test`、`npm run e2e`、產出 `upgrade-summary.md` 並自動建立 PR。
-- **PR 影響**：不直接針對現有 PR，但產出的升級 PR 會附帶測試結果。
-- **重疊情況**：與主 CI 的測試鏈相同，屬於套件升級流程。
+- **觸發條件**：每週一 01:30 UTC 排程與 `workflow_dispatch`（可選 safe/major 策略）。
+- **執行項目**：`npm install`、`npm outdated` 前後比較、依策略執行 `npm update` 或 `npx npm-check-updates` 後重新安裝、生成 `upgrade-summary.md`、上傳 artifacts、建立升級 PR。
+- **PR 影響**：產出的升級 PR 依賴主 CI 檢查；本身不再執行測試。
+- **備註**：避免重複測試，僅保留升級與報告邏輯。
 
 ### npm-outdated (`.github/workflows/npm-outdated.yml`)
 
-- **觸發條件**：每週一 01:00 UTC 排程、手動執行（可選擇是否跑本地 @ui）。
-- **執行項目**：`npm ci`、選擇性安裝 Playwright、`npm outdated --json` 產出報告、上傳 artifact、寫入 step summary；僅當手動且勾選 `run_e2e` 時才執行 `npm run e2e:ui`。
-- **PR 影響**：無；純資訊盤點。
-- **重疊情況**：符合保留盤點、不跑測試的要求。
+- **觸發條件**：每週一 01:00 UTC 排程與 `workflow_dispatch`。
+- **執行項目**：`npm ci`、`npm outdated --json` 產出報告、寫入 summary、上傳 artifact。
+- **PR 影響**：無；僅提供資訊盤點。
+- **備註**：不再支援選配 Playwright 測試，完全交由主 CI。
 
 ### predeploy (`.github/workflows/predeploy.yml`)
 
-- **觸發條件**：`workflow_dispatch`、對 `main` 的 PR 與 push。
-- **執行項目**：`npm ci`、Playwright 安裝、clasp 建版與更新 PROD deployment、`npm run e2e:ui`、`npm run e2e:remote`（auto-repair）、`node scripts/health-check.mjs`、上傳 artifacts。
-- **PR 影響**：PR 任一步驟失敗即紅燈，且會直接修改 PROD 部署。
-- **重疊情況**：與 `gas-deploy`（甚至 `ci-preview`）完全重複，且在 PR 階段推送 PROD 有額外風險。
+- **觸發條件**：`push`（main）與 `workflow_dispatch`。
+- **執行項目**：`npm ci`、撰寫 `~/.clasprc.json`、`npx clasp version`、`npx clasp deploy`，並確認 `GAS_WEBAPP_URL` Secret。
+- **PR 影響**：僅在 main 上執行，專注於 PROD 部署，無額外測試。
+- **備註**：已剔除 Playwright/Jest，以避免和 CI 重疊。
 
 ### 其它檔案
 
-- **gas-deploy.yml.bak-20250929-054713**：舊版部署工作流備份，未被觸發。
-- **新增 文字文件.txt**：紀錄手動查閱 GitHub Actions 日誌的指令；非 YAML，runner 不會執行。
-- **\_tmpl_clasp.json**：clasp 設定樣板，供 Actions 在產出 `.clasprc.json` 時使用。
+- **\_tmpl_clasp.json**：clasp 設定樣板，無觸發條件。
 
 ## PR 觸發重疊與風險
 
-| 工作流           | PR 觸發                              | Lint | Jest | Playwright                   | a11y | 健康檢查 | clasp/部署            | PR 紅燈來源                     | 備註                                 |
-| ---------------- | ------------------------------------ | ---- | ---- | ---------------------------- | ---- | -------- | --------------------- | ------------------------------- | ------------------------------------ |
-| ci-preview       | 是（非 main push / PR / `/preview`） | 否   | 否   | 是（@ui/@remote）            | 否   | 是       | 是（測試 Deployment） | Playwright、health、clasp       | 與 gas-deploy、predeploy 重複        |
-| gas-deploy       | 是（main PR/push）                   | 否   | 是   | 是（@ui/@remote、Puppeteer） | 否   | 是       | 是（TEST/PROD）       | Jest、Playwright、health、clasp | 主 CI + 部署                         |
-| predeploy        | 是（main PR/push）                   | 否   | 否   | 是（@ui/@remote）            | 否   | 是       | 是（PROD）            | Playwright、health、clasp       | PR 階段即推 PROD，與 gas-deploy 重複 |
-| codex-audit      | 否（需手動）                         | 是   | 是   | 是                           | 否   | 否       | 否                    | 僅手動稽核                      | —                                    |
-| npm-auto-upgrade | 否（排程/手動）                      | 否   | 是   | 是                           | 否   | 否       | 否                    | 升級 PR 內                      | 與主 CI 相同流程，用於自動升級       |
-| npm-outdated     | 否（排程/手動）                      | 否   | 否   | 選配                         | 否   | 否       | 否                    | 無                              | 預設僅產出 outdated.json             |
+| 工作流           | PR 觸發                           | Lint | Jest | Playwright                         | a11y | 健康檢查     | clasp/部署            | PR 紅燈來源                            | 備註                   |
+| ---------------- | --------------------------------- | ---- | ---- | ---------------------------------- | ---- | ------------ | --------------------- | -------------------------------------- | ---------------------- |
+| ci               | 是（pull_request）                | 是   | 是   | 是（@ui/@remote，遠端需雙 Secret） | 是   | 是（非阻斷） | 否                    | Install、Lint、Jest、Playwright、pa11y | 主 CI；唯一自動檢查    |
+| ci-preview       | 否（workflow_dispatch）           | 否   | 否   | 是（僅遠端、雙 Secret）            | 否   | 是           | 是（測試 Deployment） | 遠端 E2E、健康檢查                     | 手動預覽部署           |
+| codex-audit      | 否（需手動 `/audit`）             | 是   | 是   | 是                                 | 否   | 否           | 否                    | Lint、Jest、Playwright                 | 手動稽核               |
+| gas-deploy       | 否（workflow_dispatch）           | 否   | 否   | 是（僅遠端、雙 Secret）            | 否   | 是           | 是（TEST/PROD）       | 遠端 E2E、健康檢查、clasp              | 分階段部署             |
+| npm-auto-upgrade | 否（排程/手動）                   | 否   | 否   | 否                                 | 否   | 否           | 否                    | 無                                     | 升級報告交由主 CI 驗證 |
+| npm-outdated     | 否（排程/手動）                   | 否   | 否   | 否                                 | 否   | 否           | 否                    | 無                                     | 套件盤點               |
+| predeploy        | 否（main push/workflow_dispatch） | 否   | 否   | 否                                 | 否   | 否           | 是（PROD）            | clasp                                  | main 專用部署          |
 
-> 結論：`ci-preview`、`gas-deploy`、`predeploy` 需依「去重執行對照表」進行調整，以免同一組 Playwright / clasp 流程在 PR 階段跑三次且互相覆蓋部署環境。
+> 結論：PR 事件僅剩 `ci.yml` 會自動執行並覆蓋所有測試，其餘工作流維持手動或排程用途，避免重複測試與部署衝突。
