--- a/工作流盤點報告.md
+++ b/工作流盤點報告.md
@@ -15,10 +15,10 @@
 - **on**：`workflow_dispatch`
 - **lint**：❌
 - **test**：❌
-- **e2e**：✅ `npm run e2e:ui`、條件式 `npm run e2e:remote`
+- **e2e**：✅ 僅在雙 Secret 存在時執行 `npm run e2e:remote`
 - **a11y**：❌
 - **health**：✅ `node scripts/health-check.mjs`
-- **備註**：建立測試版 Deployment 後跑本地/遠端 UI 冒煙並輸出報告。
+- **備註**：手動佈署到 staging 後，保留遠端冒煙與健康報告；其他測試交由 CI 處理。
 
 ## .github/workflows/codex-audit.yml
 
@@ -34,31 +34,31 @@
 
 - **on**：`workflow_dispatch`
 - **lint**：❌
-- **test**：✅ `npm test --if-present`
-- **e2e**：✅ `npm run e2e:ui`、條件式 `npm run e2e:remote`
+- **test**：❌
+- **e2e**：✅ 僅在雙 Secret 存在時執行 `npm run e2e:remote`
 - **a11y**：❌
 - **health**：✅ `node scripts/health-check.mjs`
-- **備註**：分成測試與部署階段，最後使用 `clasp deploy` 更新 PROD 並驗證版本。
+- **備註**：聚焦部署所需的 clasp 步驟，保留遠端冒煙與健康檢查。
 
 ## .github/workflows/npm-auto-upgrade.yml
 
 - **on**：`schedule`（每週一 01:30 UTC）、`workflow_dispatch`
 - **lint**：❌
-- **test**：⚠️ 僅手動觸發時執行 `npm test`
-- **e2e**：⚠️ 僅手動觸發時執行 `npm run e2e`
+- **test**：❌
+- **e2e**：❌
 - **a11y**：❌
 - **health**：❌
-- **備註**：依 `strategy`（safe/major）調整套件並自動建立 PR，無條件健康檢查。
+- **備註**：僅升級套件與建立 PR，測試結果請參考主 CI。
 
 ## .github/workflows/npm-outdated.yml
 
 - **on**：`schedule`（每週一 01:00 UTC）、`workflow_dispatch`
 - **lint**：❌
 - **test**：❌
-- **e2e**：⚠️ 手動且 `run_e2e=true` 時執行 `npm run e2e:ui`
+- **e2e**：❌
 - **a11y**：❌
 - **health**：❌
-- **備註**：核心任務為輸出 `outdated.json` 與 Summary 報告。
+- **備註**：僅輸出 `outdated.json` 與 Summary，測試交回 CI。
 
 ## .github/workflows/predeploy.yml
 
@@ -75,15 +75,3 @@
 - **on**：❌（僅模板檔案）
 - **lint/test/e2e/a11y/health**：不適用
 - **備註**：作為自訂 Workflow 樣板，不由 GitHub Actions 直接執行。
-
-## .github/workflows/gas-deploy.yml.bak-20250929-054713
-
-- **on**：❌（歷史備份）
-- **lint/test/e2e/a11y/health**：不適用
-- **備註**：保留舊版部署流程做為參考。
-
-## .github/workflows/新增 文字文件.txt
-
-- **on**：❌（純備忘）
-- **lint/test/e2e/a11y/health**：不適用
-- **備註**：紀錄手動操作步驟，非自動化流程。
