chore: streamline workflows and tests

--- a/工作流盤點報告.md
+++ b/工作流盤點報告.md
@@ -15,10 +15,10 @@
 - **on**：`workflow_dispatch`
 - **lint**：❌
 - **test**：❌
-- **e2e**：✅ 僅在雙 Secret 存在時執行 `npm run e2e:remote`
+- **e2e**：❌
 - **a11y**：❌
-- **health**：✅ `node scripts/health-check.mjs`
-- **備註**：手動佈署到 staging 後，保留遠端冒煙與健康報告；其他測試交由 CI 處理。
+- **health**：❌
+- **備註**：手動佈署到 staging，僅執行 clasp 版本與部署步驟，所有測試交回主 CI。
 
 ## .github/workflows/codex-audit.yml
 
@@ -35,10 +35,10 @@
 - **on**：`workflow_dispatch`
 - **lint**：❌
 - **test**：❌
-- **e2e**：✅ 僅在雙 Secret 存在時執行 `npm run e2e:remote`
+- **e2e**：❌
 - **a11y**：❌
-- **health**：✅ `node scripts/health-check.mjs`
-- **備註**：聚焦部署所需的 clasp 步驟，保留遠端冒煙與健康檢查。
+- **health**：❌
+- **備註**：僅保留 clasp 憑證檢查、部署版本推送與部署驗證，移除所有測試以避免重複執行。
 
 ## .github/workflows/npm-auto-upgrade.yml
 
